@@ -395,6 +395,7 @@ void bindTypeId()
 		.value( "LineSegment3fParameter", LineSegment3fParameterTypeId )
 		.value( "LineSegment3dParameter", LineSegment3dParameterTypeId )
 		.value( "DataInterleaveOp", DataInterleaveOpTypeId )
+		.value( "DataConvertOp", DataConvertOpTypeId )
 	;
 }
 
