@@ -250,6 +250,7 @@ from CameraControllerTest import CameraControllerTest
 from PointDistributionOpTest import PointDistributionOpTest
 from LRUCacheTest import LRUCacheTest
 from DataInterleaveOpTest import DataInterleaveOpTest
+from DataConvertOpTest import DataConvertOpTest
 
 if IECore.withASIO() :
 	from DisplayDriverTest import *
